# VectorSearch-RBAC

./: .gitmodules  README.md  compile_pgvector.sh  config.json  delete_result_files.sh  requirements.txt  run_benchmark.sh  setup_db.sh
acorn_benchmark/: CMakeLists.txt  config.json  install_dependencies.sh
acorn_benchmark/include/: acorn_search.h  benchmark_utils.h  dynamic_partition_search.h  index_creation.h  json_utils.h  row_level_security.h
acorn_benchmark/src/: acorn_search.cpp  benchmark_utils.cpp  dynamic_partition_search.cpp  index_creation.cpp  json_utils.cpp  main.cpp  row_level_security.cpp
basic_benchmark/: build_dynamic_partition_indexes.py  build_main_index.py  build_role_indexes.py  common_function.py  common_prepare_pipeline.py  compute_ground_truth.py  condition_config.py  config_params.json  generate_queries.py  initialize_combination_role_partition_tables.py  initialize_dynamic_partition_tables.py  initialize_role_partition_tables.py  space_calculate.py  test_all.py  test_dynamic_partition.py  test_partition_prefilter_by_combination_role.py  test_partition_prefilter_by_role.py  test_postfilter.py  test_qd_tree_partition.py  test_row_level_security.py
controller/: clear_database.py  initialize_main_tables.py  prepare_database.py
controller/baseline/HQI/: README.md  build_tree.py  persist_tree.py  qd_tree.py
controller/baseline/HQI/debug/: debug_qdtree_query.py  dump_qdtree_structure.py  export_qdtree_dot.py  list_role_partitions.py  validate_qdtree_partitions.py
controller/baseline/pg_row_security/: row_level_security.py
controller/baseline/postfilter/: postfilter.py
controller/baseline/prefilter/: initialize_partitions.py  prefilter_combination_role.py  prefilter_role.py
controller/dynamic_partition/: get_parameter.py  load_result_to_database.py  search.py
controller/dynamic_partition/acorn/: AnonySys_dynamic_partition.py
controller/dynamic_partition/hnsw/: AnonySys_dynamic_partition.py  deletion.py  deletion_rolllback.py  heavy_partition_refine.py  helper.py  insertion.py  insertion_rolllback.py
controller/dynamic_partition/hnsw/analysis/: analysis_hnsw_qps.py  analysis_hnsw_qps_logn.py  analysis_hnsw_recall.py  plot_query_time_from_json.py  plot_recall_from_json.py  validate_recall_model.py
controller/dynamic_partition/hnsw/validate/: modelqps_vs_realqps.py  modelrecall_dynamic_partition_validation.py  modelrecall_vs_realrecall.py  multi_parameter_model_validation.py  plot_recall_validation_from_json.py
logical_partition_benchmark/benchmark/: BUILD.md  CMakeLists.txt  README.md  USAGE.md  build_and_run.sh  cleanup_indexes.sh  config.json
logical_partition_benchmark/benchmark/faiss/faiss/: CMakeLists.txt  IndexFlat.cpp  IndexHNSW.cpp  IndexHNSW.h  IndexHNSWLib.cpp  IndexHNSWLib.h
logical_partition_benchmark/benchmark/faiss/faiss/impl/: AuxIndexStructures.h  HNSW.cpp  HNSW.h
logical_partition_benchmark/benchmark/faiss/faiss/utils/: omp_utils.h
logical_partition_benchmark/benchmark/src/: benchmark_utils.h  dynamic_partition_results.json  global_hnsw_index.cpp  global_hnsw_index.h  independent_hnsw_index.cpp  independent_hnsw_index.h  independent_hnsw_index_faiss.cpp  independent_hnsw_index_faiss.h  main_global_postfilter_comparison.cpp  main_pointer_only.cpp  main_pointer_preload.cpp  main_preload.cpp  main_role_partition_comparison.cpp  physical_dynamic_partition_results.json  physical_postfilter_results.json  physical_role_partition_results.json  pointer_hnsw_index.cpp  pointer_hnsw_index.h  postfilter_results.json  role_partition_results.json  shared_vector_table.cpp  shared_vector_table.h
logical_partition_benchmark/benchmark/src/tests/: test_hnsw_compare.cpp  test_postfilter.cpp
logical_partition_benchmark/benchmark/src/tests/test_logical_partition/: test_dynamic_partition.cpp  test_postfilter.cpp  test_role_partition.cpp
logical_partition_benchmark/benchmark/src/tests/test_physical_partition/: test_dynamic_partition.cpp  test_postfilter.cpp  test_role_partition.cpp
logical_partition_benchmark/dynamic_logical_partition/: AnonySys_dynamic_partition.py  hnsw_config.json
pgvector/src/: hnsw.c  hnsw.h
pgvector/test/expected/: hnsw_vector.out
pgvector/test/sql/: hnsw_vector.sql
services/: config.py  embedding_service.py  logger.py  read_dataset_function.py
services/rbac_generator/: arxiv_generator_business.py  common.py  erbac_data_generator.py  random_rbac_data_generator.py  sharing_tree_based_rbac_data_generator.py  store_erbac_generate_data.py  store_random_rbac_generate_data.py  store_sharing_tree_based_rbac_generate_data.py  store_tree_based_rbac_generate_data.py  tree_based_rbac_data_generator.py
